<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ======Generale====== -->
    <string name="app_name">NobelPrize</string>
    <string name="action_settings">Settings</string>
    <string name="searchNameHint">Enter a name or surname</string>
    <string name="searchDateHint">Enter a year</string>
    <string name="searchButton">Search</string>
    <string name="searchViewNameString">Test</string>
    <string name="fieldPrompt">Please choose a field</string>
    <!-- ======Generale====== -->


    <!-- ======MainActivity====== -->
    <string name="MainActivity__image_winner_description"></string>
    <string name="MainActivity_button_chercher">Search</string>
    <string name="MainActivity_button_jouer">Play</string>
    <string name="MainActivity_toast_sortir">Press back to exit</string>    
    <string name="ShakeToast">\? </string>
    <!-- ======MainActivity====== -->


    <!-- ======LaureateDetailActivity====== -->
    <string name="LaureateDetail_image_winner_description"></string>
    <string name="LaureateDetail_textview_biography">Biography</string>
    <string name="LaureateDetail_textview_prize">Prizes</string>
    <string name="LaureateDetail_textview_born"></string>
    <!-- ======LaureateDetailActivity====== -->


    <!-- ======SearchActivity====== -->
    <string-array name="fieldArray">
        <item>all &lt;categories&gt;</item>
        <item>physics</item>
        <item>chemistry</item>
        <item>medicine</item>
        <item>literature</item>
        <item>peace</item>
        <item>economics</item>
    </string-array>

    <string name="genderPrompt">Please choose a gender</string>

    <string-array name="genderArray">
        <item>all &lt;gender/organization&gt;</item>
        <item>female</item>
        <item>male</item>
        <item>organization</item>
    </string-array>
    <!-- ======SearchActivity====== -->


    <!-- ======SplashScreen====== -->
    <string name="title_activity_splash_screen">NobelPrize</string>
    <string name="SplashScreen_logo_description"></string>
    <!-- ======SplashScreen====== -->


    <!-- ======TrueFalseGame====== -->
    <string name="TrueFalseGame_Question">Loading Question</string>
    <string name="TrueFalseGame_True">True</string>
    <string name="TrueFalseGame_False">False</string>
    <string name="TrueFalseGame_QuestionNumber">Question #1 of 5</string>
    <string name="TrueFalseGame_RightAnswerToast">Right Answer!</string>
    <string name="TrueFalseGame_WrongAnswerToast">Wrong Answer!</string>
    <string name="TrueFalseImageContentDescription">Image corresponding to response</string>
    <!-- ======TrueFalseGame====== -->


    <!-- ======WhoAmIGame====== -->


    <!-- ======WhoAmIGame====== -->


    <!-- ======GeneralGame====== -->
    <string name="Question">Loading Question</string>
    <string name="QuestionNumber">Question #1 of 5</string>
    <string name="ImageContentDescription">Image corresponding to response</string>
    <string name="RightAnswerToast">Right Answer!</string>
    <string name="WrongAnswerToast">Wrong Answer!</string>    
    <string name="ClueShakeToast">Clue given, if thy phone thou shake !</string>
    <!-- ======GeneralGame====== -->


    <!-- ======MenuGame====== -->
    <string name="MenuGame_button_MCQGame">MCQ</string>
    <string name="MenuGame_button_TrueFalseGame">True or False</string>
    <string name="MenuGame_button_WhoAmIGame">Who Am I</string>
    <string name="MenuGame_Username">MyUsername</string>
    <string name="MenuGame_MCQStat">0/0</string>
    <string name="MenuGame_TrueFalseStat">0/0</string>
    <string name="MenuGame_WhoAmIStat">0/0</string>
    <string name="MenuGame_MonScore">My Score</string>
    <string name="MenuGame_MonScore_value">0/0</string>
    <string name="MenuGame_MesTrophees">My Trophies</string>
    <!-- ======MenuGame====== -->


    <!-- ======Mes Trophées====== -->
    <string name="MesTrophées_title">My Trophies</string>
    <string name="MesTrophées_1">Use a tip to solve a question</string>
    <string name="MesTrophées_2">Answer correctly a question without using a tip</string>
    <string name="MesTrophées_3">Answer 3 question correctly consecutively</string>
    <string name="MesTrophées_4">Answer correctly 5 questions from each game</string>
    <string name="MesTrophées_5">Your own Nobel Prize (Obtain every other trophies)</string>
    <string name="trophyImageDescription">Trophy</string>
    <!-- ======Mes Trophées====== -->


    <!-- ======Preferences====== -->
    <string name="PrefScreen_UsernameTitle">Your username</string>
    <string name="PrefScreen_UsernameDescription">The username is used to store your scores</string>
    <string name="PrefScreen_VibrateTitle">Activate or deactivate Vibration</string>
    <string name="PrefScreen_VibrateDescription">The phone vibrates when your answer is incorrect</string>
    <string name="PrefMenu_titleMenu">Preferences</string>
    <string name="PrefMenu_titleMenuCondensed">Pref</string>
    <!-- ======Preferences====== -->

</resources>