<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/activity_main_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/MenuGame_Username"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextViewMenuGame_MesTrophees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/MenuGame_MesTrophees" />

            <ImageButton
                android:id="@+id/imageButton_trophes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextViewMenuGame_MesTrophees"
                android:layout_below="@+id/TextViewMenuGame_MesTrophees"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="buttonMenuGameTropheClick"
                android:src="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/TextViewMenuGame_Mon_Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/TextViewMenuGame_MesTrophees"
                android:text="@string/MenuGame_MonScore" />

            <TextView
                android:id="@+id/TextViewMenuGame_Mon_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextViewMenuGame_Mon_Score"
                android:layout_below="@+id/TextViewMenuGame_MesTrophees"
                android:text="@string/MenuGame_MonScore_value" />
            
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/activity_main_buttonMCQGame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:onClick="buttonMCQGameClick"
            android:text="@string/MenuGame_button_MCQGame" />

        <TextView
            android:id="@+id/activity_main_MCQ_Stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/MenuGame_MCQStat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/activity_main_buttonTrueFalseGame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:onClick="buttonTrueFalseGameClick"
            android:text="@string/MenuGame_button_TrueFalseGame" />

        <TextView
            android:id="@+id/activity_main_TrueFalse_Stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/MenuGame_TrueFalseStat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/activity_main_buttonWhoAmIGame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:onClick="buttonWhoAmIGameClick"
            android:text="@string/MenuGame_button_WhoAmIGame" />

        <TextView
            android:id="@+id/activity_main_WhoAmI_Stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/MenuGame_WhoAmIStat" />
    </LinearLayout>

</LinearLayout>