<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <TextView 
        android:id="@+id/TextViewTrueFalse_Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/TrueFalseGame_Question"
        android:textSize="24sp"/>
    
	<TextView 
        android:id="@+id/TextViewTrueFalse_QNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/TrueFalseGame_QuestionNumber"
        android:textSize="20sp"/>
    
    <Button 
        android:id="@+id/ButtonTrueFalseGame_False"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/TextViewTrueFalse_QNumber"
        android:text="@string/TrueFalseGame_False"
        android:textSize="30sp"/>
    
    <Button 
        android:id="@+id/ButtonTrueFalseGame_True"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/ButtonTrueFalseGame_False"
        android:text="@string/TrueFalseGame_True"
        android:textSize="30sp"/>

	<ImageView
	    android:id="@+id/ImageFeedbackQuestion"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/TextViewTrueFalse_QNumber"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="28dp"
	    android:contentDescription="@string/TrueFalseImageContentDescription"
	    android:src="@drawable/unknownquestion" />

</RelativeLayout>
