<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="fill"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/activity_main_image_winner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:contentDescription="@string/MainActivity__image_winner_description"
        android:src="@drawable/empty_user" >
    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/activity_main_name_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/activity_main_description_winner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/activity_main_buttonChercher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:onClick="buttonChercherClick"
        android:text="@string/MainActivity_button_chercher" />

    <Button
        android:id="@+id/activity_main_buttonJouer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:onClick="buttonJouerClick"
        android:text="@string/MainActivity_button_jouer" />

</LinearLayout>